<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:background="@color/white"
    app:cardElevation="0dp"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_for_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="16dp">
            <ImageView
                android:id="@+id/img_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/teal_200"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:maxLines="2"
            android:layout_below="@id/card_for_thumbnail"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="4dp"/>

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_more_vert_24"
            android:layout_below="@id/tv_source"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/button" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>