<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_marginBottom="8dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:maxLines="2"
            android:layout_toStartOf="@id/card_for_thumbnail"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tv_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:maxLines="2"
            android:layout_toStartOf="@id/card_for_thumbnail"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_more_vert_24"
            android:layout_below="@id/tv_source"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/card_for_thumbnail"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_for_thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            app:cardCornerRadius="16dp"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/img_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image"
                android:src="@color/teal_200" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.cardview.widget.CardView>