<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:elevation="0dp"
            app:contentInsetEnd="46dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button"
                    android:src="@drawable/ic_back_button"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/tv_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/btn_back"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:maxLines="1"
                    android:text="@string/source"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_scrollFlags="">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/date"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_date"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/source"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_for_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/tv_author"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/img_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image"
                    android:scaleType="centerCrop"
                    android:src="@color/teal_200" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_for_thumbnail"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_show_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/show_more"
                android:textColor="@color/purple_500"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/indigo_700"
        android:clickable="true"
        android:contentDescription="@string/button"
        android:focusable="true"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_expand_less_24"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fab_expand"
        android:backgroundTint="@color/indigo_500"
        android:clickable="true"
        android:contentDescription="@string/button"
        android:focusable="true"
        android:visibility="invisible"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/fab_expand"
        app:layout_constraintEnd_toEndOf="@+id/fab_expand"
        app:srcCompat="@drawable/ic_outline_favorite"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/fab_share"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_baseline_share_24"
        app:tint="@color/white"
        android:visibility="invisible"
        app:backgroundTint="@color/indigo_500"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/fab_fav"
        app:layout_constraintEnd_toEndOf="@+id/fab_fav"
        android:contentDescription="@string/button" />

</androidx.constraintlayout.widget.ConstraintLayout>