<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/source_sans_pro_bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:padding="16dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headlines_news"
                android:fontFamily="@font/source_sans_pro"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_headline"
                android:layout_below="@id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <include
                android:id="@+id/view_error"
                layout="@layout/view_error"
                android:visibility="gone"
                android:layout_below="@id/headline"
                android:layout_height="250dp"
                android:layout_width="match_parent" />

            <ProgressBar
                android:id="@+id/progress_bar_headline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/headline"
                android:layout_marginTop="16dp"
                android:visibility="gone"/>
            <View
                android:layout_below="@id/rv_headline"
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/gray_opacity" />
            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/trending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view"
                android:text="@string/trending"
                android:fontFamily="@font/source_sans_pro"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trending"
                android:layout_below="@id/trending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                tools:listitem="@layout/item_trending"/>
            <include
                android:id="@+id/view_error_trending"
                layout="@layout/view_error"
                android:visibility="gone"
                android:layout_below="@id/trending"
                android:layout_height="250dp"
                android:layout_width="match_parent" />
            <ProgressBar
                android:id="@+id/progress_bar_trending"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/trending"
                android:layout_marginTop="16dp"
                android:visibility="gone"/>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>